footer and header done

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -3,6 +3,8 @@
 
 $font-1: 'Outfit', sans-serif;
 
+$mainMarron: #c1b6a4;
+
 $dark: rgba(0, 0, 0, 1);
 $light: rgba(255, 255, 255, 1);
 $accent: rgba(255, 152, 0, 1);
