--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -1,5 +1,9 @@
 @import 'variables';
 @import 'common';
 @import 'components';
+
+
 // @import '~swiper/swiper-bundle.min.css';
 // @import '@fancyapps/ui/dist/fancybox/fancybox.css';
+
+//b29079
