--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -6,20 +6,6 @@
         text-align: center;
     }
     width: 150px;
-    &::before {
-        content: '';
-        position: absolute;
-        left: 0;
-        top: 50%;
-        transform: translateY(-50%) translateX(-20px);
-        width: 6px;
-        height: 6px;
-        background-color: white;
-        border-radius: 50%;
-        opacity: 0;
-        transition: all 0.6s ease;
-      }
-
     &:hover, &:active {
         transform: translateX(20px);
         transition: all 0.6s ease;
@@ -58,7 +44,7 @@
 }
 
 .dropmenu {
-    background-color: $mainMarron;
+    background-color: rgb(5, 5, 5);
 }
 
 .submenu {
