--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -5,7 +5,6 @@
     @media screen and (max-width: 768px) {
         text-align: center;
     }
-    width: 150px;
     &:hover, &:active {
         transform: translateX(20px);
         transition: all 0.6s ease;
@@ -44,7 +43,8 @@
 }
 
 .dropmenu {
-    background-color: rgb(5, 5, 5);
+    background-color: rgba(5, 5, 5, .7);
+    backdrop-filter: blur(20px);
 }
 
 .submenu {
