--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -50,3 +50,21 @@
 .submenu {
     background: none;
   }
+
+    .hideMenuNav {
+        display: none;
+    }
+    .showMenuNav {
+        display: block;
+        position: absolute;
+        width: 100%;
+        top: 0;
+        left: 0;
+        background: white;
+        z-index: 50;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+      }
+    
